--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,7 @@ img {
   padding-top: 14px;
   padding-bottom: 14px;
   border-radius: 4px;
+  color: rgba(255, 255, 255, 0.6);
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: var(--cta-footer-background-color);
   font: inherit;
@@ -715,7 +716,7 @@ img {
 
 .modal {
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 50%;
   border-radius: 4px;
   min-height: 581px;
@@ -741,7 +742,7 @@ img {
 }
 .closing-modal .button-close:focus,
 .closing-modal .button-close:hover {
-  fill: var(--accent-color);
+  fill: rgb(33, 150, 243);
 }
 
 .subscribe-form-modal {
@@ -839,13 +840,14 @@ img {
   align-items: center;
 }
 .icon-check {
-  width: 15px;
+  width: 16px;
   height: 15px;
   border: 2px solid var(--title-color);
   border-radius: 4px;
   margin-right: 8px;
   display: flex;
   align-items: center;
+  padding-left: 2px;
 }
 .checkbox:checked + .policy-text .icon-check {
   border: none;
