--- a/css/style.css
+++ b/css/style.css
@@ -408,11 +408,17 @@ img {
   margin-right: auto;
   justify-content: center;
 }
+.list-logo {
+  margin-right: 30px;
+}
+.list-logo:last-child {
+  margin-right: 0px;
+}
+
 .company-logo {
   display: block;
   width: 170px;
   height: 92px;
-  margin-right: 30px;
   padding: 0;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
@@ -421,6 +427,7 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .company-logo:hover,
 .company-logo:focus {
   border: 1px solid var(--accent-color);
