--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -1,6 +1,6 @@
 :root {
   --primary-text-color: #757575;
-  --titleColor: #212121;
+  --title-color: #212121;
   --accent-color: #2196f3;
   --icon-color: #afb1b8;
   --primary-background-color: #ffffff;
