--- a/sass/components/_card-set-gallery.scss
+++ b/sass/components/_card-set-gallery.scss
@@ -39,21 +39,19 @@
 }
 .card__overlay {
   position: absolute;
-  bottom: 120px;
   width: 100%;
   height: 294px;
-  padding-left: 20px;
-  padding-right: 28px;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
   background-color: rgba(33, 150, 243, 0.9);
-  display: flex;
-  align-items: center;
   transform: translateY(50%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: hidden;
 }
 .card__label {
-  text-align: start;
   font-size: 18px;
   color: #ffffff;
   line-height: 1.5;
