--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -18,6 +18,7 @@
   color: var(--title-color);
   text-transform: uppercase;
   font-weight: 700;
+  margin-top: 30px;
   margin-bottom: 10px;
   font-size: 14px;
 }
