--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -36,13 +36,13 @@
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.card__title {
+.card__title--team {
   color: var(--title-color);
   font-size: 16px;
   font-weight: 500;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
-.card__text {
+.card__text--team {
   font-size: 16px;
 }
 .social-web {
@@ -50,7 +50,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding-top: 16px;
+  margin-top: 16px;
 
   .social-web__logo {
     &:not(:last-child) {
