--- a/sass/main.css
+++ b/sass/main.css
@@ -1,6 +1,6 @@
 :root {
   --primary-text-color: #757575;
-  --titleColor: #212121;
+  --title-color: #212121;
   --accent-color: #2196f3;
   --icon-color: #afb1b8;
   --primary-background-color: #ffffff;
@@ -494,6 +494,7 @@ img {
   color: var(--title-color);
   text-transform: uppercase;
   font-weight: 700;
+  margin-top: 30px;
   margin-bottom: 10px;
   font-size: 14px;
 }
@@ -591,14 +592,14 @@ img {
   padding-bottom: 30px;
 }
 
-.card__title {
+.card__title--team {
   color: var(--title-color);
   font-size: 16px;
   font-weight: 500;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-.card__text {
+.card__text--team {
   font-size: 16px;
 }
 
@@ -607,7 +608,7 @@ img {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding-top: 16px;
+  margin-top: 16px;
 }
 .social-web .social-web__logo:not(:last-child) {
   margin-right: 10px;
@@ -928,21 +929,19 @@ img {
 
 .card__overlay {
   position: absolute;
-  bottom: 120px;
   width: 100%;
   height: 294px;
-  padding-left: 20px;
-  padding-right: 28px;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
   background-color: rgba(33, 150, 243, 0.9);
-  display: flex;
-  align-items: center;
   transform: translateY(50%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: hidden;
 }
 
 .card__label {
-  text-align: start;
   font-size: 18px;
   color: #ffffff;
   line-height: 1.5;
