--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -2,6 +2,7 @@
   padding-top: 94px;
 }
 .features__list {
+  color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -22,6 +23,13 @@
   margin-bottom: 10px;
   font-size: 14px;
 }
+// // .features__text {
+// //   color: var(--primary-text-color);
+// //   font-size: 16px;
+// //   font-weight: 400;
+// //   line-height: 1.17;
+// //   letter-spacing: 0.03em;
+// }
 .features__item {
   width: 270px;
   margin-right: 30px;
