--- a/sass/main.css
+++ b/sass/main.css
@@ -477,6 +477,7 @@ img {
 }
 
 .features__list {
+  color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -601,6 +602,7 @@ img {
 
 .card__text--team {
   font-size: 16px;
+  color: var(--primary-text-color);
 }
 
 .social-web {
