--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,7 +4,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(./images/mobile/imghero.jpg);
+    url(../images/mobile/imghero.jpg);
   background-position: center;
   background-repeat: no-repeat;
   max-width: 100%;
@@ -18,7 +18,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(./images/mobile/imghero@2x.jpg);
+      url(../images/mobile/imghero@2x.jpg);
   }
   @media screen and (min-width: 480px) {
     max-width: 510px;
@@ -30,7 +30,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(./images/tablet/imghero.jpg);
+      url(../images/tablet/imghero.jpg);
     @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -38,7 +38,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(./images/tablet/imghero@2x.jpg);
+        url(../images/tablet/imghero@2x.jpg);
     }
   }
   @media screen and (min-width: 1200px) {
@@ -48,7 +48,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(./images/desktop/imghero.jpg);
+      url(../images/desktop/imghero.jpg);
     @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -56,7 +56,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(./images/desktop/imghero@2x.jpg);
+        url(../images/desktop/imghero@2x.jpg);
     }
   }
 }
