--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -16,7 +16,7 @@
   @media screen and (min-width: 768px) {
     flex-wrap: wrap;
     flex-direction: row;
-    margin-left: -15px;
+    margin-left: -30px;
     margin-top: -30px;
     padding-bottom: 60px;
   }
@@ -25,6 +25,7 @@
     margin-left: 0px;
     margin-top: 0px;
     flex-wrap: nowrap;
+    padding-bottom: 0px;
   }
 }
 .features__thumb {
@@ -54,6 +55,8 @@
   margin-top: 30px;
   margin-bottom: 10px;
   font-size: 14px;
+  display: block;
+  text-align: center;
 }
 
 .features__item {
@@ -65,7 +68,7 @@
     width: 354px;
     height: 259px;
     flex-basis: calc(100% / 2 - 30px);
-    margin-left: 15px;
+    margin-left: 30px;
     margin-top: 30px;
     margin-bottom: 0px;
 
