--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -64,9 +64,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  text-align: center;
   justify-content: center;
   padding: 100px 0px 100px 0px;
   margin: 0 auto;
+  width: 360px;
 
   @media screen and (min-width: 480px) {
     padding: 118px 0px 118px 0px;
@@ -87,7 +89,6 @@
   text-align: center;
   letter-spacing: 0.06em;
   margin-bottom: 30px;
-  margin-top: 30px;
 
   @media screen and (min-width: 480px) {
     font-size: 26px;
