--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -57,6 +57,9 @@
   font-size: 14px;
   display: block;
   text-align: center;
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
 }
 
 .features__item {
