--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -122,125 +122,7 @@
     display: none;
   }
 }
-// .mob-menu {
-//   width: 100vw;
-//   height: 100vh;
-//   position: fixed;
-//   background-color: #ffffff;
-//   top: 0;
-//   right: 0;
-//   padding-top: 16px;
-//   padding-left: 40px;
-//   padding-right: 15px;
-//   z-index: 1;
-// }
 
-// .mob-menu-closing {
-//   width: 40px;
-//   height: 40px;
-//   background-color: transparent;
-//   border: none;
-//   display: block;
-//   margin-left: auto;
-//   cursor: pointer;
-// }
-// .mob-menu__button-close {
-//   fill: var(--title-color);
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
-// .mob-menu-navigation {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-// }
-// .mob-menu__list {
-//   // margin-bottom: 64px;
-//   display: flex;
-//   flex-direction: column;
-// }
-
-// .mob-menu__item:not(:last-child) {
-//   margin-bottom: 32px;
-// }
-// .mob-menu__link {
-//   font-size: 40px;
-//   font-weight: 500;
-//   letter-spacing: 0.02em;
-//   color: var(--title-color);
-//   text-decoration: none;
-//   display: block;
-
-//   &:focus,
-//   &:hover {
-//     color: var(--accent-color);
-//   }
-// }
-// .mob-menu__contacts {
-//   display: block;
-//   margin-top: 150px;
-// }
-// .mob-menu__contacts--tel-link {
-//   font-size: 30px;
-//   font-weight: 500;
-//   text-decoration: none;
-//   letter-spacing: 0.02em;
-//   color: var(--accent-color);
-//   margin-bottom: 32px;
-//   display: block;
-//   @media screen and (min-width: 468px) {
-//     font-size: 34px;
-//   }
-// }
-// .mob-menu__contacts--mail-link {
-//   font-size: 20px;
-//   font-weight: 500;
-//   text-decoration: none;
-//   letter-spacing: 0.02em;
-//   color: var(--primary-text-color);
-//   display: block;
-//   margin-bottom: 60px;
-//   @media screen and (min-width: 468px) {
-//     font-size: 24px;
-//   }
-// }
-// .mob-menu__social-web {
-//   display: flex;
-//   flex-direction: row;
-//   justify-content: center;
-//   bottom: 0;
-//   transform: translateY(100%);
-//   position: absolute;
-//   margin-bottom: 48px;
-//   margin-top: 64px;
-//   margin-right: 60px;
-// }
-// .mob-menu__social-web--link {
-//   text-decoration: none;
-//   font-size: 12px;
-//   font-weight: 500;
-//   line-height: 1.22;
-//   letter-spacing: 0.02em;
-//   color: var(--accent-color);
-//   @media screen and (min-width: 468px) {
-//     font-size: 18px;
-//   }
-// }
-// .web-border {
-//   height: 22px;
-//   margin-left: 10px;
-//   margin-right: 10px;
-//   border-right: 1px solid #ececec;
-// }
-// .mob-menu.is-hidden {
-//   opacity: 0;
-//   visibility: hidden;
-//   pointer-events: none;
-// }
 .mob-menu {
   width: 100vw;
   height: 100vh;
@@ -277,7 +159,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 700px;
+  min-height: 100%;
 }
 .mob-menu-navigation {
   display: flex;
