--- a/sass/components/_card-set-gallery.scss
+++ b/sass/components/_card-set-gallery.scss
@@ -70,16 +70,18 @@ img {
 }
 .card__thumb {
   height: auto;
+  position: relative;
+  overflow: hidden;
 }
 .card__overlay {
   position: absolute;
   width: 100%;
   height: 280px;
   top: 0;
-  left: 100;
+  left: 0;
   padding: 63px 24px;
   background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(50%);
+  transform: translateY(100%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
