--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,7 +1,9 @@
 .section-features {
   padding-top: 60px;
+  padding-bottom: 60px;
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
+    padding-bottom: 0px;
   }
 }
 .features__list {
@@ -18,7 +20,7 @@
     flex-direction: row;
     margin-left: -30px;
     margin-top: -30px;
-    padding-bottom: 60px;
+    // padding-bottom: 60px;
   }
   @media screen and (min-width: 1200px) {
     flex-direction: row;
@@ -29,19 +31,21 @@
   }
 }
 .features__thumb {
-  display: block;
+  display: flex;
   align-items: center;
-  padding: 15px 110px 15px 100px;
+  justify-content: center;
   border: none;
-  @media screen and (min-width: 480px) {
-    padding: 25px 190px 25px 190px;
-  }
-  @media screen and (min-width: 768px) {
-    padding: 25px 142px 25px 142px;
-  }
-  @media screen and (min-width: 1200px) {
-    padding: 25px 100px 25px 100px;
-  }
+  background-color: var(--accent-background-color);
+  width: 100%;
+  height: 120px;
+
+  // }
+  // @media screen and (min-width: 768px) {
+  //   padding: 25px 142px 25px 142px;
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   padding: 25px 100px 25px 100px;
+  // }
 }
 .features__icon {
   width: 70px;
@@ -64,8 +68,14 @@
 
 .features__item {
   margin-bottom: 30px;
+  width: 290px;
+  // height: 220px;
   &:last-child {
-    margin-bottom: 60px;
+    margin-bottom: 0px;
+  }
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 220px;
   }
   @media screen and (min-width: 768px) {
     width: 354px;
