--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -159,7 +159,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100%;
+  min-height: 650px;
 }
 .mob-menu-navigation {
   display: flex;
