--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,5 @@
 .overlay {
+  margin: 0 auto;
   background-color: var(--cta-footer-background-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -65,18 +66,19 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  padding: 100px 0px 100px 0px;
+  // padding: 100px 0px 100px 0px;
   margin: 0 auto;
-  width: 360px;
+  padding-top: 100px;
+  // width: 360px;
 
   @media screen and (min-width: 480px) {
-    padding: 118px 0px 118px 0px;
+    padding-top: 118px;
   }
-  @media screen and (min-width: 768px) {
-    padding: 118px 0px 118px 0px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   padding: 118px 0px 118px 0px;
+  // }
   @media screen and (min-width: 1200px) {
-    padding: 200px 0px 200px 0px;
+    padding-top: 220px;
   }
 }
 .cta__title {
