--- a/sass/main.css
+++ b/sass/main.css
@@ -512,7 +512,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100%;
+  min-height: 650px;
 }
 
 .mob-menu-navigation {
@@ -639,6 +639,7 @@ img {
 }
 
 .overlay {
+  margin: 0 auto;
   background-color: var(--cta-footer-background-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/imghero.jpg);
   background-position: center;
@@ -687,23 +688,17 @@ img {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  padding: 100px 0px 100px 0px;
   margin: 0 auto;
-  width: 360px;
+  padding-top: 100px;
 }
 @media screen and (min-width: 480px) {
   .cta {
-    padding: 118px 0px 118px 0px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .cta {
-    padding: 118px 0px 118px 0px;
+    padding-top: 118px;
   }
 }
 @media screen and (min-width: 1200px) {
   .cta {
-    padding: 200px 0px 200px 0px;
+    padding-top: 220px;
   }
 }
 
@@ -754,10 +749,12 @@ img {
 
 .section-features {
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
   .section-features {
     padding-top: 94px;
+    padding-bottom: 0px;
   }
 }
 
@@ -777,7 +774,6 @@ img {
     flex-direction: row;
     margin-left: -30px;
     margin-top: -30px;
-    padding-bottom: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -791,25 +787,13 @@ img {
 }
 
 .features__thumb {
-  display: block;
+  display: flex;
   align-items: center;
-  padding: 15px 110px 15px 100px;
+  justify-content: center;
   border: none;
-}
-@media screen and (min-width: 480px) {
-  .features__thumb {
-    padding: 25px 190px 25px 190px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .features__thumb {
-    padding: 25px 142px 25px 142px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .features__thumb {
-    padding: 25px 100px 25px 100px;
-  }
+  background-color: var(--accent-background-color);
+  width: 100%;
+  height: 120px;
 }
 
 .features__icon {
@@ -835,9 +819,16 @@ img {
 
 .features__item {
   margin-bottom: 30px;
+  width: 290px;
 }
 .features__item:last-child {
-  margin-bottom: 60px;
+  margin-bottom: 0px;
+}
+@media screen and (min-width: 480px) {
+  .features__item {
+    width: 450px;
+    height: 220px;
+  }
 }
 @media screen and (min-width: 768px) {
   .features__item {
@@ -1628,6 +1619,8 @@ img {
 
 .card__thumb {
   height: auto;
+  position: relative;
+  overflow: hidden;
 }
 
 .card__overlay {
@@ -1635,10 +1628,10 @@ img {
   width: 100%;
   height: 280px;
   top: 0;
-  left: 100;
+  left: 0;
   padding: 63px 24px;
   background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(50%);
+  transform: translateY(100%);
   opacity: 0;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
