--- a/sass/components/_card-set-gallery.scss
+++ b/sass/components/_card-set-gallery.scss
@@ -26,10 +26,8 @@
 }
 .card__item--portfolio {
   margin-bottom: 30px;
-  &:first-child {
-    display: flex;
-    flex-grow: 1;
-  }
+  display: flex;
+  flex-grow: 1;
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
     margin-left: 30px;
@@ -38,8 +36,6 @@
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
-    margin-top: 30px;
   }
 }
 img {
@@ -75,6 +71,7 @@ img {
 }
 .card__overlay {
   position: absolute;
+  content: " ";
   width: 100%;
   height: 280px;
   top: 0;
