--- a/sass/components/_jobs.scss
+++ b/sass/components/_jobs.scss
@@ -22,10 +22,6 @@ img {
   }
 }
 .jobs__list {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
   display: none;
   @media screen and (min-width: 1200px) {
     display: flex;
@@ -55,6 +51,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    content: " ";
   }
 }
 .thumb__label {
