--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,6 +1,9 @@
 .section-features {
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 30px;
+  }
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
     padding-bottom: 0px;
@@ -20,10 +23,8 @@
     flex-direction: row;
     margin-left: -30px;
     margin-top: -30px;
-    // padding-bottom: 60px;
   }
   @media screen and (min-width: 1200px) {
-    flex-direction: row;
     margin-left: 0px;
     margin-top: 0px;
     flex-wrap: nowrap;
@@ -38,14 +39,6 @@
   background-color: var(--accent-background-color);
   width: 100%;
   height: 120px;
-
-  // }
-  // @media screen and (min-width: 768px) {
-  //   padding: 25px 142px 25px 142px;
-  // }
-  // @media screen and (min-width: 1200px) {
-  //   padding: 25px 100px 25px 100px;
-  // }
 }
 .features__icon {
   width: 70px;
@@ -69,7 +62,6 @@
 .features__item {
   margin-bottom: 30px;
   width: 290px;
-  // height: 220px;
   &:last-child {
     margin-bottom: 0px;
   }
