update sass compiler

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,7 +5,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/mobile/imghero.jpg);
+    url(/images/desktop/imghero.jpg);
   background-position: center;
   background-repeat: no-repeat;
   max-width: 100%;
@@ -19,7 +19,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/mobile/imghero@2x.jpg);
+      url(/images/mobile/imghero@2x.jpg);
   }
   @media not all and (min-width: 480px) {
     max-width: 510px;
@@ -31,7 +31,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/tablet/imghero.jpg);
+      url(/images/tablet/imghero.jpg);
     @media not all and (min-width: 768px) and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -39,7 +39,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/tablet/imghero@2x.jpg);
+        url(/images/tablet/imghero@2x.jpg);
     }
   }
   @media screen and (min-width: 1200px) {
@@ -49,7 +49,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/desktop/imghero.jpg);
+      url(/images/desktop/imghero.jpg);
     @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -57,7 +57,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/desktop/imghero@2x.jpg);
+        url(/images/desktop/imghero@2x.jpg);
     }
   }
 }
